--- a/Notes/Unit6/Unit6.tex
+++ b/Notes/Unit6/Unit6.tex
@@ -1012,5 +1012,110 @@
 
 
 
+\section{Discussion Section}
+\begin{itemize}
+    \item \marginnote{6/1:}Things to know for the final:
+    \begin{itemize}
+        \item Synthesis.
+        \item Carbonyls and dinitrogen.
+        \begin{itemize}
+            \item Stretches, characteristics of the metal center, etc.
+        \end{itemize}
+        \item \ce{N2} reduction.
+        \item Bonding properties/effects.
+        \begin{itemize}
+            \item Dihydrogen vs. dihydride adduct.
+            \item Olefin or alkyl?
+            \item Ties back into nature of \ce{CO} bonds.
+        \end{itemize}
+        \item Fundamentals of organometallic reactions: Coordination preferences, insertion/elimination preferences, dihydrogen vs. dihydride, just practice going through and drawing mechanisms.
+        \item Polypropylene and similar polymerization (including bonding preferences for themetal and the olefin).
+        \item ROMP/metathesis.
+        \begin{itemize}
+            \item Olefin and carbene source --- make sure you include the correct end group!
+            \item Grubbs catalyst in general to four center intermediate.
+        \end{itemize}
+        \item Monsanto and Cativa processes.
+        \begin{itemize}
+            \item Why do we use iridium/iodide?
+            \item Iridium speeds up oxidative addition but slows down insertion. However, a ruthenium promoter can make insertion faster.
+        \end{itemize}
+        \item Hydrogenationo type: Cyanation, borylation, formylation.
+        \item Cross-coupling.
+        \item Phosphines.
+        \begin{itemize}
+            \item Amazing ligands.
+            \item A question about which phosphines are better than others.
+        \end{itemize}
+        \item \textcite{bib:HalpernHydrogenation}.
+        \item Wacker oxidation, Mizoroki-Heck cross-couplings.
+        \item Strong foundation in ligand and metal donor properties --- seriously study homeworks and past tests.
+    \end{itemize}
+    \item Likely get to choose your own reagents for the synthesis questions.
+    \item There is always synthesis. There is always carbonyls. There is always bonding preferences. There is always a polymerization question. The Monsanto and Cativa processes are almost always included.
+    \item Know fundamentals first, and then study specific processes.
+    \item Review both midterms and psets.
+    \item Notes on hydroboration:
+    \begin{figure}[H]
+        \centering
+        \chemfig{[:18]*5(([:-106]<)([:-146]>:)-([:-34]>:)([:-74]<)-O-\chemabove{B}{H}-O-)}
+        \caption{The hydroborate \ce{HBpin}.}
+        \label{fig:HBpin}
+    \end{figure}
+    \begin{itemize}
+        \item Know \ce{HBpin} (see Figure \ref{fig:HBpin}).
+        \begin{itemize}
+            \item Won't do alternate reactivity because of the tertiary carbons.
+            \item Won't ask for specialty boron chemistry.
+        \end{itemize}
+        \item If the ligands are too big, the hydride will substitute for a ligand instead of having pure oxidative addition.
+        \item Hydroboration probably \emph{can} proceed with an alkyne.
+        \begin{itemize}
+            \item You just need to make sure it doesn't react twice.
+        \end{itemize}
+    \end{itemize}
+    \item Things to know how to synthesize.
+    \begin{itemize}
+        \item Metal phosphine complex: \ce{L_nM ->[PR3] L_nM(PR3)}.
+        \item Olefin adduct: \ce{L_nM ->[R-=] L_nM(||R)}.
+        \begin{itemize}
+            \item Alternatively: \ce{L_nMCl ->[EtLi][-LiCl] L_nMEt -> L_nM(H)(||)}.
+        \end{itemize}
+        \item Stable alkyl: \ce{L_nMCl ->[tBu--MgBr][-MgClBr] L_nM--tBu}.
+        \begin{itemize}
+            \item Use an alkyl species with no $\beta$-hydrogens present.
+        \end{itemize}
+        \item Fischer Carbene: \ce{L_nM(CO) ->[LiR] Li[L_nM(COR)] ->[R$'$Br][-LiBr] L_nM(C(OR)(R$'$))}.
+        \begin{itemize}
+            \item Add a super reactive alkyl lithium species. The negatively charged \ce{R} group will attack the carbon.
+            \item A salt metathesis then leads to the final species.
+            \item A really sensitive reaction.
+        \end{itemize}
+        \item Carbyne: \ce{L_nM-C#O ->[RX] [L_nM#C-O-R]X}.
+        \begin{itemize}
+            \item \ce{TMSCl} is a good electrophile and a good example of an \ce{RX}.
+            \item You need a lot of backbonding in order to favor this reactivity instead of oxidative addition to the metal or something.
+        \end{itemize}
+        \item Schrock Carbene: \ce{L_nM--tBu ->[LiCH3][-CH4] Li[L_nM=C(H)(tBu)]}.
+        \begin{itemize}
+            \item You want to add something that can abstract an \ce{H} from the primary carbon.
+        \end{itemize}
+        \item N-heteroocyclic carbene: See Figure \ref{fig:NHeterocyclicCarbeneSynthesis}.
+    \end{itemize}
+    \item Example syntheses:
+    \begin{itemize}
+        \item \ce{Fe(CO)5 ->[TMSCl][-CO] Fe(CO)4(TMS)(Cl) ->[NaCp][-NaCl, 2CO] CpFe(CO)2(TMS)}.
+        \begin{itemize}
+            \item Change in oxidation state from reactant to product is $+2$, so we will probably want an oxidative addition followed by a salt metathesis to remove the undesired countercation or counteranion.
+            \item To know how many carbonyls the intermediate should have, do electron counting (4 carbonyls make the intermediate an $18\,\e[-]$ species).
+            \item If you do the \ce{NaCp} addition first, you lose all the carbonyls at once.
+        \end{itemize}
+        \item \ce{Cp2TiMe2 ->[PhOH][-CH4] Cp2Ti(Me)(OPh)}.
+        \item \ce{O3Re-O-ReO3 -> HRe(CO)5}?
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
