--- a/Notes/Unit1/Unit1.tex
+++ b/Notes/Unit1/Unit1.tex
@@ -159,7 +159,7 @@
         < \ce{Ru^3+}
         < \ce{Pd^4+}
         < \ce{Ir^3+}
-        < \ce{Pd^4+}
+        < \ce{Pt^4+}
     \end{equation*}
     \item Hard/soft acid-base theory:
     \begin{itemize}
@@ -469,7 +469,7 @@
     3. From 2, assign a $d$-electron count.
         & 3. The number of electrons that a given ligand donates is equal to its formal charge plus twice the number of dative bonds plus the number of covalent bonds.\\
     4. The electron count equals the $d^n$ count plus the ligand donors (typically 2 electrons per ligand).
-        & 4. The electron count is that $d^n$ count for \ce{M^0} plus the sum of the ligand electron donations minus the charge on the complex.
+        & 4. The electron count is the $d^n$ count for \ce{M^0} plus the sum of the ligand electron donations minus the charge on the complex.
 \end{tchart}
 \begin{itemize}
     \item Gain familiarity with the $d$ counts of common transition metals.
