--- a/Notes/Unit2/Unit2.tex
+++ b/Notes/Unit2/Unit2.tex
@@ -597,7 +597,7 @@
     \end{enumerate}
     \item Jack Halpern of UChicago writes \textcite{bib:HalpernVaska}.
     \begin{itemize}
-        \item Studies \ce{L2IrClCo ->[MeX] L2IrClCoMeX}, specifically the reaction rates as a function of \ce{X}.
+        \item Studies \ce{L2IrClCO ->[MeX] L2IrClCOMeX}, specifically the reaction rates as a function of \ce{X}.
         \item Determines that $\ce{I-}>\ce{Br-}>>\ce{Cl-}$, and that $\text{Rate}=k\ce{[CH3X][Ir]}$.
         \item $\Delta S^\ddagger=\SI{-43}{{e.u.}}$ (where an e.u. is an entropy unit).
         \item Solvent effects are also consistent with an ionic mechanism.
@@ -750,7 +750,7 @@
     \item More groups than methyl can migrate; it's just that methyl commonly migrates.
     \item Insertions into \ce{M-C} bonds are common.
     \begin{itemize}
-        \item Insertions into \ce{M-H} bonds are common for olefins, but uncommon for \ce{CO} because metal carbonyl species are unstable.
+        \item Insertions into \ce{M-H} bonds are common for olefins, but uncommon for \ce{CO} because metal formyl species are unstable.
         \item You can also insert into \ce{M-O} bonds (note that dppe stands for diphenylphosphinoethane):
         \begin{figure}[h!]
             \centering
