--- a/Notes/Unit6/Unit6.tex
+++ b/Notes/Unit6/Unit6.tex
@@ -447,32 +447,32 @@
             \item Sulfate and related species are abbreviated to \ce{OS}.
         \end{itemize}
         \item This is the closest we've gotten to a catalytic process for converting methane into methanol so far.
-        \item Mechanistic notes:
-        \begin{enumerate}
-            \item $\sigma$ adducts.
-            \begin{itemize}
-                \item A key step is binding methane, but methane is a terrible ligand.
-                \item \ce{M(H|CH3) -> M(H)(CH3)}.
-                \item There exist other platinum systems where we can study this process in some detail, such as: \ce{($\kappa^2${-}Ph2B(CH2PR2)2)Pt(THF)(CH3) ->[C6H6, \SI{50}{\celsius}][-CH4] Pt(THF)(C6H5)}.
-                \begin{itemize}
-                    \item This presumably proceeds through benzene as a $\sigma$ adduct.
-                \end{itemize}
-            \end{itemize}
-            \item Oxidation.
-            \begin{itemize}
-                \item In the Shilov system, if you use labels, quenching \ce{{}^195PtCl6^2-}, you get no \ce{{}^195PtMe} complexes.
-                \item Indeed, it appears that \ce{PtCl6^2-} is acting purely as a \ce{Cl2} source.
-            \end{itemize}
-            \item Reductive elimination.
-            \begin{itemize}
-                \item An external nucleophilic attack, as generally supported by mechanistic studies.
-                \item \ce{($\kappa^2${-}PR2CH2CH2PR2)Pt(CH3)3OR <=> [($\kappa^2${-}PR2CH2CH2PR2)Pt(CH3)3]OR ->[OR$'$]}\\ \ce{($\kappa^2${-}PR2CH2CH2PR2)Pt(CH3)2 + CH3OR + CH3OR$'$}.
-                \item \ce{[PtCl5(CH3)]^2- ->[][-Cl^-] [PtCl4Me]^-Cl^- ->[H2O] PtCl4^2- + MeOH + H+}.
-                \item \ce{[PtCl5(CH3)]^2- ->[][-Cl^-] [PtCl4Me]^-Cl^- ->[Cl] PtCl4^2- + CH3Cl}.
-                \item Labeling studies also support the inversion of stereochemistry.
-            \end{itemize}
-        \end{enumerate}
     \end{itemize}
+    \item Mechanistic notes:
+    \begin{enumerate}
+        \item $\sigma$ adducts.
+        \begin{itemize}
+            \item A key step is binding methane, but methane is a terrible ligand.
+            \item \ce{M(H|CH3) -> M(H)(CH3)}.
+            \item There exist other platinum systems where we can study this process in some detail, such as: \ce{($\kappa^2${-}Ph2B(CH2PR2)2)Pt(THF)(CH3) ->[C6H6, \SI{50}{\celsius}][-CH4] Pt(THF)(C6H5)}.
+            \begin{itemize}
+                \item This presumably proceeds through benzene as a $\sigma$ adduct.
+            \end{itemize}
+        \end{itemize}
+        \item Oxidation.
+        \begin{itemize}
+            \item In the Shilov system, if you use labels, quenching \ce{{}^195PtCl6^2-}, you get no \ce{{}^195PtMe} complexes.
+            \item Indeed, it appears that \ce{PtCl6^2-} is acting purely as a \ce{Cl2} source.
+        \end{itemize}
+        \item Reductive elimination.
+        \begin{itemize}
+            \item An external nucleophilic attack, as generally supported by mechanistic studies.
+            \item \ce{($\kappa^2${-}PR2CH2CH2PR2)Pt(CH3)3OR <=> [($\kappa^2${-}PR2CH2CH2PR2)Pt(CH3)3]OR ->[OR$'$]}\\ \ce{($\kappa^2${-}PR2CH2CH2PR2)Pt(CH3)2 + CH3OR + CH3OR$'$}.
+            \item \ce{[PtCl5(CH3)]^2- ->[][-Cl^-] [PtCl4Me]^-Cl^- ->[H2O] PtCl4^2- + MeOH + H+}.
+            \item \ce{[PtCl5(CH3)]^2- ->[][-Cl^-] [PtCl4Me]^-Cl^- ->[Cl] PtCl4^2- + CH3Cl}.
+            \item Labeling studies also support the inversion of stereochemistry.
+        \end{itemize}
+    \end{enumerate}
     \item While methane activation may not yet be feasible industrially, it is in the pharmaceutical industry.
     \item Directed \ce{C-H} activation.
     \item Examples:
@@ -1040,7 +1040,7 @@
             \item Why do we use iridium/iodide?
             \item Iridium speeds up oxidative addition but slows down insertion. However, a ruthenium promoter can make insertion faster.
         \end{itemize}
-        \item Hydrogenationo type: Cyanation, borylation, formylation.
+        \item Hydrogenation type: Cyanation, borylation, formylation.
         \item Cross-coupling.
         \item Phosphines.
         \begin{itemize}
@@ -1113,6 +1113,7 @@
         \item \ce{Cp2TiMe2 ->[PhOH][-CH4] Cp2Ti(Me)(OPh)}.
         \item \ce{O3Re-O-ReO3 -> HRe(CO)5}?
     \end{itemize}
+    \item \textbf{Reorganization energy}: The energy required for all geometric changes (e.g., bond lengthening or shortening), spin state changes, or solvent rearrangement.
 \end{itemize}
 
 
